--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,21 @@
 
             "js": [
                 "lib/jquery-3.2.1.min.js",
-                "cs_modules/permissoes.administradas.ShowNames.js"
+                "scripts/permissoes.administradas.ShowNames.js"
+            ]
+
+            
+        },
+        {
+            "matches": ["*://*.br/*controlador.php?acao=procedimento_controlar*"],
+
+            "run_at": "document_idle",
+
+            "all_frames": true,
+
+            "js": [
+                "lib/jquery-3.2.1.min.js",
+                "scripts/processos.ShowDesc.js"
             ]
 
             
